tests/baselines/reference/asyncArrowFunction10_es5.errors.txt
tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction10_es5.ts(3,11): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es5/asyncArrowFunction/asyncArrowFunction10_es5.ts (1 errors) ====
    var foo = async (): Promise<void> => {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }
    